New in spot 2.12.0.dev (not yet released)

  Command-line tools:

  - ltlmix is a new tool that generate formulas by combining existing
    ones. See https://spot.lre.epita.fr/ltlmix.html for examples.

  - autfilt learned --restrict-dead-end-edges, to restricts labels of
    edges leading to dead-ends.  See the description of
    restrict_dead_end_edges_here() below.

  - ltlfilt learned --pi1, --sigma1, --delta1, --pi2, --sigma2, and
    --delta2 to filter according to classes Π₁,Σ₁,Δ₁,Π₂,Σ₂, and Δ₂.

  - ltlfilt learned --to-delta2 to transform an LTL formula into Δ₂.

  Library:

   - restrict_dead_end_edges_here() can reduce non-determinism (but
     not remove it) by restricting the label L of some edge (S)-L->(D)
     going to a state D that does not have other successor than
     itself.  The conditions are detailled in the documentation of
     this function.

   - spot::postprocessor will now call restrict_dead_end_edges_here()
     in its highest setting.  This can be fine-tuned with the "rde"
     extra option, see the spot-x (7) man page for detail.

   - The formula class now keeps track of membership to the Δ₁, Σ₂,
     Π₂, and Δ₂ syntactic class.  This can be tested with
     formula::is_delta1(), formula::is_sigma2(), formula::is_pi2(),
     formula::is_delta2().  See doc/tl/tl.pdf from more discussion.

   - spot::to_delta2() implements Δ₂-normalization for LTL formulas,
     following "Efficient Normalization of Linear Temporal Logic" by
     Esparza et al. (J. ACM, 2024).

   - Trivial rewritings (those performed everytime at construction)
     were missing the rule "[*0]|f ≡ f" when f already accepts the
     empty word.  (Issue #545.)

  Bug fixes:

  - Generating random formulas without any unary opertor would very
    often create formulas much smaller than specified.

New in spot 2.12  (2024-05-16)

  Build:

  - When Python bindings are enabled, Spot now requires Python 3.6 or